<resources>
    <string name="app_name" translatable="false">My Weather App</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign in</string>
    <string name="menu">Menu</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="default_info_title" translatable="false">Default Location</string>
    <string name="default_info_snippet" translatable="false">No places found, because location permission is disabled.</string>
    <string name="option_get_place" translatable="false">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="password_error">Password error</string>
    <string name="user_success">User success</string>
    <string name="user_not_found">User not found</string>
    <string name="enter_login_or_password">Enter login or password</string>
    <string name="welcome_name">"Welcome: "</string>
    <string name="user_exist">User Exist</string>
    <string name="passwords_not_equals">Passwords not equals</string>
    <string name="fill_all_fields">Fill all Fields</string>
    <string name="background" translatable="false">Background</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="map">Map</string>
</resources>
